--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -22,6 +22,14 @@
     list-style-type: none;
 }
 
+#left-blank {
+    float: left;
+    background-color: #ffffff;
+    padding: 5px;
+    width: 170px;
+    list-style-type: none;
+}
+
 #right {
     float: right;
     background-color: #ece3a5;
